# game-ai-platform

./: .actrc  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  security_fix1.md
.github/: README.md
.github/workflows/: backend-pull-request-checks.yml  build-base-image.yml  build-worker-image.yml  frontend-build.yml  gamelib-pull-request-checks.yml  orchestration-pull-request-checks.yml  playwright.yml  publish-gamelib.yml  pull-request-checks.yml
agents/: agent_base.py
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01cfca842715_add_agent_id_to_submission.py  0e4b8796ced2_add_logs_to_agent_containers.py  15355efeb556_move_results_and_logs_from_match_job_to_.py  1597ec254317_agent_containers.py  3851068f20dc_add_hex_to_gametype_enum.py  3c1df0b8d7b4_merge_front_back_connect_heads.py  4c94a97de484_add_profile_picture_url.py  6bd0852dfd26_initial_user_model.py  8b7a2c3f1d4e_decouple_submissions_from_agents.py  978362826bf7_move_state_from_submission_to_build_job.py  aa252e285444_add_submissions_and_matches.py  af42d14dff92_add_game_state_to_matches.py  b1cb92f7e0ab_rework_agent_stats.py  b3a3db84af20_image_cleanup_and_create_flags.py  b77f8cc711b2_add_agent_stats.py  b7a1c9e4d2f0_add_game_type_to_submissions.py  c1f2d3e4a5b6_add_names_to_agents_and_submissions.py  c7d2f9a4e1b3_add_token_version_to_users.py  d06f47280c3d_add_arenas.py  d093208e4420_add_email_verification_and_password_.py  d7e1f3a9b2c5_add_tournaments.py  e8c4a1b9f2d3_add_platform_flags.py  e9c1d06f4728_add_packages_to_arena.py  ec3ce9a59142_add_client_error_to_matchstatus.py  ef450c3b7b81_allow_active_submission_nullable.py  f20d83768be4_add_hex_rl_to_gametype_enum.py  f4b5244cbe9a_add_agents_and_jobs.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/repositories/: agent.py  agent_container.py  arena.py  job.py  match.py  platform_flag.py  submission.py  tournament.py  user.py
backend/app/api/routes/: agent_containers.py  agents.py  arenas.py  auth.py  email.py  jobs.py  matches.py  platform.py  submissions.py  tournaments.py  users.py
backend/app/api/services/: agent.py  agent_container.py  arena.py  auth.py  email.py  job.py  match.py  match_scheduler.py  platform.py  submission.py  submission_builds.py  tournament.py  tournament_bracket.py  tournament_scheduler.py  user.py
backend/app/core/: __init__.py  config.py  email.py  match_events.py  match_scheduler.py  payload_limits.py  queue.py  rate_limit.py  security.py  state_init.py  statistics.py  tasks.py  tokens.py
backend/app/db/: base.py  connection.py  session.py
backend/app/models/: __init__.py  agent.py  agent_container.py  arena.py  game.py  job.py  match.py  platform_flag.py  statistics.py  submission.py  tournament.py  user.py
backend/app/schemas/: __init__.py  agent.py  agent_container.py  arena.py  auth.py  email.py  job.py  match.py  platform.py  statistics.py  submission.py  tournament.py  user.py
backend/postman/: AI_Game_Platform.postman_collection.json  AI_Game_Platform.postman_environment.json
backend/scripts/: commands.py  requeue_matches.py  seed_db.py
backend/tests/: conftest.py  fakes.py  pytest.ini  test_backend.py  test_match_scheduler.py  test_tournament_bracket.py  utils.py
backend/tests/api/: test_agent_containers.py  test_arenas.py  test_auth.py  test_cors.py  test_e2e_flows.py  test_email.py  test_jobs.py  test_permissions.py  test_platform_freeze.py  test_rate_limiting.py  test_submissions_and_agents.py  test_tournaments.py  test_users.py
deploy/: README.md
deploy/scripts/: backup_postgres.sh  get_deployed_logs.sh
deploy/terraform/: backend-startup.sh  backend-vm.tf  main.tf  outputs.tf  providers.tf  service-account.tf  startup.sh  variables.tf  worker-mig.tf  worker-startup.sh  worker-template.tf
docs/: README.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  (+4 more)
gamelib/: README.md  README_PYPI.md  agent_base.py  engine_base.py  gamestate_base.py  move_base.py  pyproject.toml
gamelib/gamelib/: __init__.py  agent_base.py  dev_runner_base.py  engine_base.py  gamestate_base.py  move_base.py  play.py
gamelib/gamelib/hex/: __init__.py  agent.py  dev_runner.py  engine.py  gamestate.py  human_agent.py  move.py
gamelib/gamelib/hex/examples/: __init__.py  simple_agent.py
gamelib/gamelib/tictactoe/: __init__.py  agent.py  dev_runner.py  engine.py  gamestate.py  human_agent.py  move.py
gamelib/gamelib/tictactoe/examples/: __init__.py  simple_agent.py  simple_error_agent.py  simple_slow_agent.py  simple_very_slow_agent.py
gamelib/scripts/: commands.py
gamelib/tests/: utils.py
gamelib/tests/hex/: test_hex.py
gamelib/tests/tictactoe/: test_dev_runner.py  test_tictactoe.py
gamelib/tictactoe/: agent.py  engine.py  gamestate.py  move.py
gamelib/tictactoe/examples/: simple_agent.py
games/: engine_base.py
orchestration/: Dockerfile.agent  Dockerfile.agent.local  Dockerfile.base  Dockerfile.worker  README.md  SECURITY.md  agent_builder_worker.py  base_requirements.txt  default_dockerignore  match_runner_worker.py  pyproject.toml  secure_default_settings.yaml  test_local_gamelib_build.py  torch_requirements.txt
orchestrator/: README.md  container_manager.py  match_manager.py  match_runner_worker.py
submissions/: Dockerfile  Dockerfile.agent  Dockerfile.base  README.md  SECURITY.md  agent_builder.py  agent_builder_worker.py  agent_manager.py  agent_runner.py  base_requirements.txt  pyproject.toml  secure_default_settings.yaml
submissions/tests/: conftest.py  test_agent_builder.py  test_agent_manager.py  test_agent_runner.py
tests/: README.md  conftest.py  requirements.txt  test_full_match.py  test_submission_to_agent.py
(+111 files in other folders)
