[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-ai-platform-backend"
version = "0.1.0"
description = "AI Game Competition Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.120.4",
    "uvicorn[standard]==0.38.0",
    "sqlmodel==0.0.27",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "python-jose[cryptography]==3.5.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "alembic>=1.12,<2.0",
    "aiosmtplib==5.0.0",
    "email-validator==2.3.0",
    "slowapi==0.1.9",
    "redis==7.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "black==25.11.0",
    "ruff==0.14.5",
    "mypy==1.18.2",
    "psycopg[binary]==3.2.12"
]

[tool.hatch.build.targets.wheel]
packages = ["app", "alembic"]

[tool.uv]
python-version = "3.11"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
