[project]
name = "submissions"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "docker==7.1.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "urllib3==2.5.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.1"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent_runner", "agent_manager", "agent_builder"]
