[project]
name = "submissions"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "docker==7.1.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "urllib3==2.5.0",
]

[dependency-groups]
dev = ["ruff>=0.14.7", "pytest>=9.0.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
